scss/modules/_datatables.scss
// Datatables
//
// .is-showing-filters    - Class applied to body when the filters are open, causing the datatable to shrink slightly
//
// Styleguide modules.datatables

// Wraps the datatable on browse pages

.dataTables_wrapper {
  overflow-x: scroll;
}

.datatable__container {
  @include clearfix();
  @include transition(opacity, .2s);
  position: relative;
  opacity: 0;
  overflow: hidden;
  width: 100%;
  padding-top: 8rem;

  @include media($lg) {
    @include transition(width .5s);
    border-top: 0;
    padding: 2rem 2rem 2rem 5rem;
  }
}

.is-showing-filters {
  .datatable__container {

  }

  @include media($lg) {
    .datatable__container {
      width: calc(100% - 30rem);
      float: left;
    }
  }
}

.data-table {
  @include transform(translateX(0%));
  @include transition-property(transform);
  @include transition-duration(.5s);
  height: 100%;
  font-family: $sans-serif;
  position: relative;

  th {
    padding: .5rem 1rem;
    border-bottom: 1px solid $primary;

    &:focus {
      outline: none;
      border: 2px solid $primary-contrast;
    }
  }

  tr {
    border-left-width: 0;
    background-color: $cream;
    border-bottom: 1px solid $neutral;

    &:focus {
      outline: none;

      td {
        background-color: rgba($ivory, .3);
      }
    }
  }

  td {
    @include transition(padding-left, .2s);
    @include u-truncate();
    padding: 1rem;
  }

  .sorting,
  .sorting_asc,
  .sorting_desc {
    background-position: 0 1rem;
    background-repeat: no-repeat;
    cursor: pointer;
    padding-left: 1rem;
  }

  .sorting_disabled {
    cursor: default;
  }

  .value-bar {
    margin-top: .5rem;
    height: .5rem;
  }

  @include media($lg) {
    th,
    td {
      padding-left: 1rem;
      padding-right: 1rem;
    }
  }

  // Special styles for tables that use `offsetX: true`
  &.scrollX {
    border-collapse: separate;
    table-layout: auto;
  }
}

// Special styles for rows that trigger panels
.row--has-panel {
    @include transition(border-left-width, .2s);
    cursor: pointer;
}

.row-active {
  td {
    background-color: rgba($ivory, .3);
    border-top: 1px solid $ivory;
    border-bottom: 1px solid $ivory;
  }

  td:first-child {
    padding-left: 1rem;
    border-left: 1px solid $ivory;
  }
}

// Sortable headers
.sorting {
  background-image: url('../img/i-sort--neutral.png');
  background-image: url('../img/i-sort--neutral.svg');
}

.sorting_asc {
  background-image: url('../img/i-sort-up--neutral.png');
  background-image: url('../img/i-sort-up--neutral.svg');
}

.sorting_desc {
  background-image: url('../img/i-sort-down--neutral.png');
  background-image: url('../img/i-sort-down--neutral.svg');
}

// Miscellaneous classes
//
// .is-incumbent      - If used, applied to candidate that currently holds the office in election tables

.is-incumbent {
  @include u-background-image('i-star--primary', 0% 0%);
  padding-left: 2rem;
}

// For wrapping long table cells instead of truncating
.data-table--wrapped {
  td {
    white-space: pre-wrap;
    overflow: visible;
  }
}

// Scrolling tables
.dataTables_scroll {
  position: relative;
}

.dataTables_scrollBody {

  .data-table {
    position: static;
  }
}

